--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -146,6 +146,11 @@
             // TODO: MODULE_FILTERS
             // 1. Change the DOM to show the selected duration filter. Use the provided input event
             // 2. Invoke saveFiltersToLocalStorage here
+            document.getElementById("data").textContent="";
+            filters["duration"]=event.target.value;
+            let filteredAdventures= filterFunction(adventures, filters)
+            addAdventureToDOM(filteredAdventures)
+            saveFiltersToLocalStorage(filters)
 
         }
 
@@ -154,6 +159,12 @@
             // TODO: MODULE_FILTERS
             // 1. Change the DOM to clear the Duration filter. Refer clearCategory() below
             // 2. Invoke saveFiltersToLocalStorage here
+            document.getElementById("duration-select").selectedIndex=0;
+            document.getElementById("data").textContent="";
+            filters["duration"]="";
+            let filteredAdventures= filterFunction(adventures, filters)
+            addAdventureToDOM(filteredAdventures)
+            saveFiltersToLocalStorage(filters)
 
         }
 
@@ -176,7 +187,8 @@
             addAdventureToDOM(filteredAdventures);
 
             // TODO: MODULE_FILTERS
-            // 1. Invoke saveFiltersToLocalStorage here
+            // 1. Invoke saveFiltersToLocalStorage 
+            saveFiltersToLocalStorage(filters)
         }
 
         //executed when clear button is clicked on category filter dropdown
@@ -190,6 +202,7 @@
 
             // TODO: MODULE_FILTERS
             // 1. Invoke saveFiltersToLocalStorage here
+            saveFiltersToLocalStorage(filters)
         }
 
         //helper function
